[package]
name = "markdown_img_url_editor_rust"
version = "1.0.3"
authors = ["yumetodo <yume-wikijp@live.jp>"]
edition = "2018"
description = "![alt](I want to edit here)"
repository = "https://github.com/yumetodo/markdown_img_url_editor_rust.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.8.0"
wasm-bindgen = "0.2.68"
js-sys = "0.3.45"
console_error_panic_hook = "0.1.6"

[lib]
crate-type = ["cdylib"]
